--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "optimist": "~0.3.5",
-    "async": "~0.1.22"
+    "async": "~0.1.22",
+    "openport": "0.0.3",
+    "mkdirps": "0.0.0"
   }
 }
