--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "~0.1.22",
     "mkdirps": "0.0.0",
     "node-forge": "^0.6.34",
-    "optimist": "~0.3.5"
+    "optimist": "~0.3.5",
+    "ws": "^0.8.0"
   }
 }
