--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": "https://github.com/joeferner/node-http-mitm-proxy",
   "bugs": {
-    "url" : "https://github.com/joeferner/node-http-mitm-proxy/issues",
+    "url" : "https://github.com/joeferner/node-http-mitm-proxy/issues"
   },
   "bin": {
     "http-mitm-proxy": "./bin/mitm-proxy.js"
