--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "HTTP Man In The Middle (MITM) Proxy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": "https://github.com/joeferner/node-http-mitm-proxy",
   "bugs": {
-    "url" : "https://github.com/joeferner/node-http-mitm-proxy/issues"
+    "url": "https://github.com/joeferner/node-http-mitm-proxy/issues"
   },
   "bin": {
     "http-mitm-proxy": "./bin/mitm-proxy.js"
@@ -26,6 +26,11 @@
     "Félicien François <felicien@tweakstyle.com>"
   ],
   "license": "MIT",
+  "devDependencies": {
+    "mocha": "^2.3.4",
+    "request": "^2.67.0",
+    "node-static": "^0.7.7"
+  },
   "dependencies": {
     "async": "^1.5.0",
     "mkdirps": "0.0.0",
