--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "async": "^2.5.0",
+    "debug": "^4.1.0",
     "mkdirp": "^0.5.1",
     "node-forge": "^0.7.1",
     "optimist": "^0.6.1",
