--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^4.0.1",
-    "request": "^2.83.0",
-    "node-static": "^0.7.10"
+    "mocha": "^5.2.0",
+    "node-static": "^0.7.10",
+    "request": "^2.83.0"
   },
   "dependencies": {
     "async": "^2.5.0",
     "debug": "^4.1.0",
     "mkdirp": "^0.5.1",
-    "node-forge": "^0.7.1",
+    "node-forge": "^0.8.0",
     "optimist": "^0.6.1",
     "semaphore": "^1.1.0",
     "ws": "^3.2.0"
