--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-mitm-proxy",
-  "version": "0.8.2",
+  "version": "0.9.0",
   "description": "HTTP Man In The Middle (MITM) Proxy",
   "main": "index.js",
   "types": "index.d.ts",
@@ -29,17 +29,17 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^6.1.4",
+    "mocha": "^8.2.0",
     "node-static": "^0.7.10",
     "request": "^2.83.0"
   },
   "dependencies": {
-    "async": "^2.6.2",
+    "async": "^3.2.0",
     "debug": "^4.1.0",
     "mkdirp": "^0.5.1",
-    "node-forge": "^0.8.4",
-    "optimist": "^0.6.1",
+    "node-forge": "^0.10.0",
     "semaphore": "^1.1.0",
-    "ws": "^3.2.0"
+    "ws": "^3.3.3",
+    "yargs": "^16.1.0"
   }
 }
