convert examples to typescript, extract out classes
convert examples to typescript, extract out classes

tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "commonjs",
+    "module": "CommonJS",
     "lib": [ "es6", "es2017", "esnext"],
-    "sourceMap": true,
     "moduleResolution": "node",
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
