--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
-    "lib": [ "es6", "es2017", "esnext"],
-    "moduleResolution": "node",
-    "removeComments": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "composite": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./types.d.ts"],
-    "noImplicitReturns": true,
+    "lib": ["dom", "es6", "es2017", "esnext"],
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": true,
+    "noImplicitThis": false,
     "outDir": "dist",
+    "removeComments": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "ESNext",
+    "typeRoots": ["./node_modules/@types", "./types.d.ts"],
     "baseUrl": "."
   },
   "include": ["lib/**/*.ts", "index.ts", "bin/*.ts"],
