--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "TS_NODE_TRANSPILE_ONLY=true TS_NODE_PRETTY=true ts-mocha test/01_proxy.ts --exit",
+    "test": "cross-env TS_NODE_TRANSPILE_ONLY=true TS_NODE_PRETTY=true ts-mocha test/01_proxy.ts --exit",
     "build": "rimraf dist && tsc"
   },
   "repository": "https://github.com/joeferner/node-http-mitm-proxy",
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "async": "^3.2.4",
+    "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "esm": "^3.2.25",
     "mkdirp": "^1.0.4",
