--- a/package.json
+++ b/package.json
@@ -36,26 +36,25 @@
     "node": ">=8.0 <=16"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^16.11.41",
-    "mocha": "^10.0.0",
-    "node-static": "^0.7.11",
-    "request": "^2.88.2"
+    "@types/mocha": "10.0.x",
+    "@types/node": "18.11.x",
+    "mocha": "10.2.x",
+    "node-static": "0.7.x",
+    "request": "^2.88.2",
+    "ts-mocha": "10.0.x",
+    "prettier": "2.8.x",
+    "rimraf": "3.0.x",
+    "cross-env": "7.0.x",
+    "ts-node": "10.9.x",
+    "typescript": "4.9.x"
   },
   "dependencies": {
-    "async": "^3.2.4",
-    "cross-env": "^7.0.3",
-    "debug": "^4.3.4",
-    "esm": "^3.2.25",
-    "mkdirp": "^1.0.4",
-    "node-forge": "^1.3.1",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "semaphore": "^1.1.0",
-    "ts-mocha": "^10.0.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4",
-    "ws": "^8.8.0",
-    "yargs": "^17.5.1"
+    "async": "3.2.x",
+    "debug": "4.3.x",
+    "mkdirp": "1.0.x",
+    "node-forge": "1.3.x",
+    "semaphore": "1.1.x",
+    "ws": "8.11.x",
+    "yargs": "17.6.x"
   }
 }
