fix node (not typescript) import/require of mitm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "lib": ["dom", "es6", "es2017", "esnext"],
+    "lib": ["ES2020"],
     "module": "CommonJS",
+    "target": "ES2020",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": false,
@@ -18,7 +19,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ESNext",
+    "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./node_modules/@types", "./types.d.ts"],
     "baseUrl": "."
   },
