--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
   "devDependencies": {
     "@types/mocha": "10.0.x",
     "@types/node": "18.11.x",
+    "cross-env": "7.0.x",
     "mocha": "10.2.x",
     "node-static": "0.7.x",
-    "request": "^2.88.2",
-    "ts-mocha": "10.0.x",
     "prettier": "2.8.x",
+    "request": "^2.88.2",
     "rimraf": "3.0.x",
-    "cross-env": "7.0.x",
+    "ts-mocha": "10.0.x",
     "ts-node": "10.9.x",
     "typescript": "4.9.x"
   },
@@ -53,6 +53,7 @@
     "mkdirp": "1.0.x",
     "node-forge": "1.3.x",
     "semaphore": "1.1.x",
+    "uuid": "9.0.x",
     "ws": "8.11.x",
     "yargs": "17.6.x"
   }
