--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=8.0 <=16"
+    "node": ">=8.0"
   },
   "devDependencies": {
     "@types/mocha": "10.0.x",
