--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "loadmill-http-mitm-proxy",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Loadmill's HTTP Man In The Middle (MITM) Proxy",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "cross-env TS_NODE_TRANSPILE_ONLY=true TS_NODE_PRETTY=true ts-mocha test/01_proxy.ts --exit",
     "build": "rimraf dist && tsc",
