--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "http-mitm-proxy",
-  "version": "0.9.0",
-  "description": "HTTP Man In The Middle (MITM) Proxy",
+  "name": "loadmill-http-mitm-proxy",
+  "version": "0.0.7",
+  "description": "Loadmill's HTTP Man In The Middle (MITM) Proxy",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "test": "mocha"
   },
-  "repository": "https://github.com/joeferner/node-http-mitm-proxy",
+  "repository": "https://github.com/loadmill/loadmill-http-mitm-proxy",
   "bugs": {
-    "url": "https://github.com/joeferner/node-http-mitm-proxy/issues"
+    "url": "https://github.com/loadmill/loadmill-http-mitm-proxy/issues"
   },
   "bin": {
     "http-mitm-proxy": "./bin/mitm-proxy.js"
@@ -22,11 +22,7 @@
     "websocket",
     "proxy"
   ],
-  "author": "Joe Ferner <joe@fernsroth.com>",
-  "contributors": [
-    "Félicien François <felicien@tweakstyle.com>",
-    "Simon Pratt <simon@pr4tt.com>"
-  ],
+  "author": "Gilad Gur Andelman <gilad@loadmill.com>",
   "license": "MIT",
   "devDependencies": {
     "mocha": "^8.2.0",
